# FastVision

./: .gitignore  LICENSE  Makefile  README.md  init_model.py  main.py  model.py  pyproject.toml
react-app/: package-lock.json  package.json
react-app/pages/: index.js
static/: index.html
