[project]
name = "fastvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.0.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.0",
]
